--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "lab-3",
+  "name": "lab-4",
   "version": "1.0.0",
-  "description": "Crud Opreations",
+  "description": "ToDo List",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ahadlyy/ToDo-node-js.git"
+    "start": "nodemon index.js"
   },
   "author": "Ahmed Adly",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ahadlyy/ToDo-node-js/issues"
-  },
-  "homepage": "https://github.com/ahadlyy/ToDo-node-js#readme",
   "dependencies": {
     "express": "^4.19.2",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.2"
   }
 }
